# natural_computing_assingment_1

./: .gitignore  Exercise_8.ipynb  README.md  conda_environment.yml  counting_ones.py  run_ass_6.sh  sub_ass_6_plot_results.py
data/: tsp-usa-capitals.txt
rust_gen_results/: .gitignore  Cargo.toml
rust_gen_results/src/: main.rs
